<resources>
    <string name="app_name">NASA Editor</string>
    <string name="label_enter_a_file_name">Please enter a file name</string>
    <string name="label_delete">Delete</string>
    <string name="label_are_you_sure_you_want_to_delete">Are you sure you want to delete %1$s?</string>
    <string name="label_cancel">Cancel</string>
    <string name="label_project_name_is_required">A project name is required.</string>
    <string name="label_file_name_is_required">A file name is required.</string>
    <string name="label_project_name_is_missing">Project name is missing.</string>
    <string name="label_opened_file">The file %1$s has been opened</string>
    <string name="hint_start_writing_your_code_on">Begin writing your code in %1$s</string>
    <string name="label_please_select_or_create_a_file">Please select or create a file</string>
    <string name="label_please_select_a_file_to_preview">Please select a file to preview</string>
    <string name="label_file_explorer">File Explorer</string>
    <string name="label_themes">Themes</string>
    <string name="label_welcome_to_nasa_editor">Welcome to the NASA Editor</string>
    <string name="label_create_a_project_or_open_an_existing_one_to_get_started">Create a new project or open an existing one to get started</string>
    <string name="label_no_projects_found">No projects found</string>
    <string name="label_existing_projects">Existing Projects</string>
    <string name="label_create">Create</string>
    <string name="label_start_writing_your_code">Begin writing your code</string>
    <string name="label_preview">Preview</string>
    <string name="label_choose_theme">Select Theme</string>
    <string name="label_set">Apply</string>
    <string name="label_website_title">Website Title</string>
    <string name="label_enter_a_project_name">Enter a project name</string>
    <string name="label_name">Name</string>
</resources>
