<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    tools:context=".view.activity.MainActivity">


    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/label_welcome_to_nasa_editor"
        android:textSize="@dimen/_16ssp"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/tv_des"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_title"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginHorizontal="@dimen/_5sdp"
        android:layout_marginBottom="@dimen/_16sdp"
        android:gravity="center"
        android:text="@string/label_create_a_project_or_open_an_existing_one_to_get_started"
        android:textSize="@dimen/_12ssp" />


    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/anim_not_found"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_150sdp"
        android:layout_below="@id/tv_des"
        android:layout_centerHorizontal="true"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/nothing_found" />

    <TextView
        android:id="@+id/tv_noProjects"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/anim_not_found"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_18sdp"
        android:text="@string/label_no_projects_found"
        android:textSize="@dimen/_12ssp" />


    <TextView
        android:id="@+id/tv_projects"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_noProjects"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="@dimen/_5sdp"
        android:text="@string/label_existing_projects"
        android:textSize="@dimen/_18sdp"
        android:textStyle="bold"
        android:visibility="gone" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_projects"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_below="@id/tv_projects"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="@dimen/_4sdp"
        android:visibility="gone"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/project_item" />


    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/fab_add_project"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/_8sdp"
        android:text="@string/label_create"
        app:icon="@drawable/baseline_add_24" />
</RelativeLayout>
